--- a/pages/local-specialities.html
+++ b/pages/local-specialities.html
@@ -45,6 +45,12 @@
 <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
+
+<style>
+    .single-package-item:hover{
+        cursor: pointer;
+    }
+</style>
 <body>
 
 <!-- main-menu starts -->
@@ -114,7 +120,7 @@
         <div class="packages-content">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
-                    <div class="single-package-item">
+                    <div class="single-package-item" onclick="viewNokshiProducts()">
                         <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
                             <h3>Shop 1<span class="pull-right">Open</span></h3>
@@ -149,7 +155,7 @@
                             </div>
 
                             <div class="about-btn">
-                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left"
+                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left;margin-left:33%"
                                         onclick="viewNokshiProducts()">View Products</button>
                             </div><!--/.book-btn-->
                             <div class="clearfix"></div>
@@ -159,7 +165,7 @@
                 </div><!--/.col-->
 
                 <div class="col-md-4 col-sm-6">
-                    <div class="single-package-item">
+                    <div class="single-package-item" onclick="viewNokshiProducts()">
                         <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
                             <h3>Shop 2<span class="pull-right">Closed</span></h3>
@@ -194,7 +200,7 @@
                             </div>
 
                             <div class="about-btn">
-                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left"
+                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left; margin-left: 33%"
                                         onclick="viewProducts()">View Products</button>
                             </div><!--/.book-btn-->
                             <div class="clearfix"></div>
@@ -204,7 +210,7 @@
                 </div><!--/.col-->
 
                 <div class="col-md-4 col-sm-6">
-                    <div class="single-package-item">
+                    <div class="single-package-item" onclick="viewNokshiProducts()">
                         <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
                             <h3>Shop 3<span class="pull-right">Open</span></h3>
@@ -240,7 +246,7 @@
 
 
                             <div class="about-btn">
-                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left"
+                                <button style="padding:10px; background-color: #2e6e9e; color: white; border: none; float: left;margin-left: 33%"
                                         onclick="viewProducts()">View Products</button>
 
                             </div><!--/.book-btn-->
