--- a/pages/sajek_details.html
+++ b/pages/sajek_details.html
@@ -96,13 +96,16 @@
                         </div><!-- /.navbar-header-->
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-<!--                                <li><a href="./destinations.html">Tourist Spots</a></li>-->
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="./getting-here.html">Getting Here</a></li>
-                                <li><a href="./local-specialities.html">Local Markets</a></li>
-                                <li><a href="./emergency-contact.html">Emergency contact</a></li>
-<!--                                <li><a href="./all-reviews.html">Reviews</a></li>-->
-                                <li><a href="nilgiri-gallery.html">Gallery</a></li>
-                                <li><a href="./my-account.html">My Account</a></li>
+                                <li><a href="./about-us.html">About us</a></li>
+                                <li><a href="./all-photos.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./all-notices.html">Notice</a></li>
+                                <li><a href="./policies.html">Policy</a></li>
+                                <li><a href="./contact_us.html">Contact</a></li>
+                                <li><a href="./login.html">Login</a></li>
+                                <li><a href="./my-account.html">Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
@@ -204,7 +207,7 @@
 
 <!-- sidebar nav starts -->
 <div class="sidebar">
-    <h4 style="color: grey;">Page navigation</h4>
+    <h4 style="color: #122b40;">Page navigation</h4>
     <hr>
     <a  href="#accommodationID">Accommodation</a>
     <a href="#facilitiesID">Facilities</a>
@@ -212,6 +215,7 @@
     <a href="#restaurantsID">Restaurants</a>
     <a href="#offersID">Offers</a>
     <a href="#reviewsID">Reviews</a>
+    <a href="#localMarketsID">Local markets</a>
 </div>
 <!-- sidebar nav ends -->
 
@@ -914,6 +918,130 @@
 
 </section><!--/.packages-->
 <!--packages ends-->
+
+<!-- available shops start-->
+<section id="localMarketsID" class="packages">
+    <div class="container">
+        <div class="gallary-header text-center">
+            <h2>
+                Local Markets
+            </h2>
+            <p>
+                Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
+            </p>
+        </div><!--/.gallery-header-->
+        <div class="packages-content">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Shop 1<span class="pull-right">Open</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> pfjaspof
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> fasjfijof
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i>  dapspk
+                                    </span>
+                                </p>
+
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i>  eifpokf
+                                    </span>
+                                </p>
+                            </div><!--/.packages-para-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Shop 2<span class="pull-right">Closed</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> foofjipfoewf
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> fiowefpkwe
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> popdpsdf
+                                    </span>
+                                </p>
+
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> kfjwepfp
+                                    </span>
+                                </p>
+                            </div><!--/.packages-para-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/localMarket.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Shop 3<span class="pull-right">Open</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> fpiewjfpf
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i> fpoewofp
+                                    </span>
+                                </p>
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i>  iojsdf
+                                    </span>
+                                </p>
+
+                                <p>
+                                    <span>
+                                        <i class="fa fa-angle-right"></i>  oiucsdii
+                                    </span>
+                                </p>
+                            </div><!--/.packages-para-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+            </div><!--/.row-->
+        </div><!--/.packages-content-->
+
+        <!-- view all button starts-->
+        <div class="view-all-button">
+            <a href="./local-specialities.html" target="_blank">View all shops</a>
+        </div>
+        <!-- view all button ends-->
+    </div><!--/.container-->
+
+</section><!--/.packages-->
+<!--available shops end-->
 
 <!-- tourist reviews Start -->
 <section id="reviewsID" class="testemonial">
