--- a/pages/all-accommodations.html
+++ b/pages/all-accommodations.html
@@ -88,13 +88,16 @@
                         </div><!-- /.navbar-header-->
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <!--                                <li><a href="./destinations.html">Tourist Spots</a></li>-->
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="./getting-here.html">Getting Here</a></li>
-                                <li><a href="./local-specialities.html">Local Markets</a></li>
-                                <li><a href="./emergency-contact.html">Emergency contact</a></li>
-                                <!--                                <li><a href="./all-reviews.html">Reviews</a></li>-->
-                                <li><a href="nilgiri-gallery.html">Gallery</a></li>
-                                <li><a href="./my-account.html">My Account</a></li>
+                                <li><a href="./about-us.html">About us</a></li>
+                                <li><a href="./all-photos.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./all-notices.html">Notice</a></li>
+                                <li><a href="./policies.html">Policy</a></li>
+                                <li><a href="./contact_us.html">Contact</a></li>
+                                <li><a href="./login.html">Login</a></li>
+                                <li><a href="./my-account.html">Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
