--- a/pages/all-packages.html
+++ b/pages/all-packages.html
@@ -63,7 +63,7 @@
 <body>
 
 <!-- main-menu starts -->
-<header style="color:black; background-color:#4D4E54;">
+<header class="" style="color:black; background-color:#4D4E54;">
     <div class="header-area">
         <div class="container">
             <div class="row">
@@ -85,13 +85,16 @@
                         </div><!-- /.navbar-header-->
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="../index.html">home</a></li>
-                                <li><a href="./destinations.html">Destination</a></li>
-                                <li><a href="#pack">Packages </a></li>
-                                <li><a href="#spo">Special Offers</a></li>
-                                <li><a href="#blog">blog</a></li>
-                                <li><a href="#subs">subscription</a></li>
-                                <li><a href="./contact_us.html">contact</a></li>
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="./getting-here.html">Getting Here</a></li>
+                                <li><a href="./about-us.html">About us</a></li>
+                                <li><a href="./all-photos.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./all-notices.html">Notice</a></li>
+                                <li><a href="./policies.html">Policy</a></li>
+                                <li><a href="./contact_us.html">Contact</a></li>
+                                <li><a href="./login.html">Login</a></li>
+                                <li><a href="./my-account.html">Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
