--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -62,47 +62,50 @@
 </head>
 <body>
 
-    <!-- main-menu starts -->
-    <header class="" style="color:black; background-color:#4D4E54;">
-        <div class="header-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="logo">
-                            <a href="../index.html">
-                                E<span>-Tourism</span>
-                            </a>
-                        </div><!-- /.logo-->
-                    </div><!-- /.col-->
-                    <div class="col-sm-10">
-                        <div class="main-menu">
+<!-- main-menu starts -->
+<header class="" style="color:black; background-color:#4D4E54;">
+    <div class="header-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="logo">
+                        <a href="../index.html">
+                            E<span>-Tourism</span>
+                        </a>
+                    </div><!-- /.logo-->
+                </div><!-- /.col-->
+                <div class="col-sm-10">
+                    <div class="main-menu">
 
-                            <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                    <i class="fa fa-bars"></i>
-                                </button><!-- / button-->
-                            </div><!-- /.navbar-header-->
-                            <div class="collapse navbar-collapse">
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="../index.html">home</a></li>
-                                    <li><a href="./destinations.html">Destination</a></li>
-                                    <li><a href="#pack">Packages </a></li>
-                                    <li><a href="#spo">Special Offers</a></li>
-                                    <li><a href="#blog">blog</a></li>
-                                    <li><a href="#subs">subscription</a></li>
-                                    <li><a href="./contact_us.html">contact</a></li>
-                                </ul>
-                            </div><!-- /.navbar-collapse -->
-                        </div><!-- /.main-menu-->
-                    </div><!-- /.col-->
-                </div><!-- /.row -->
-                <div class="home-border"></div><!-- /.home-border-->
-            </div><!-- /.container-->
-        </div><!-- /.header-area -->
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                <i class="fa fa-bars"></i>
+                            </button><!-- / button-->
+                        </div><!-- /.navbar-header-->
+                        <div class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="./getting-here.html">Getting Here</a></li>
+                                <li><a href="./about-us.html">About us</a></li>
+                                <li><a href="./all-photos.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./all-notices.html">Notice</a></li>
+                                <li><a href="./policies.html">Policy</a></li>
+                                <li><a href="./contact_us.html">Contact</a></li>
+                                <li><a href="./login.html">Login</a></li>
+                                <li><a href="./my-account.html">Account</a></li>
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+                    </div><!-- /.main-menu-->
+                </div><!-- /.col-->
+            </div><!-- /.row -->
+            <div class="home-border"></div><!-- /.home-border-->
+        </div><!-- /.container-->
+    </div><!-- /.header-area -->
 
-    </header><!-- /.top-area-->
-    <!-- main-menu End -->
+</header><!-- /.top-area-->
+<!-- main-menu End -->
 
     <!--about-us start -->
     <section id="home" class="about-us">
