--- a/pages/payment.html
+++ b/pages/payment.html
@@ -92,13 +92,15 @@
                         </div><!-- /.navbar-header-->
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="../index.html">home</a></li>
-                                <li><a href="./all-tourist-spots.html">Tourist Spots</a></li>
-                                <li><a href="nilgiri-gallery.html">gallery</a></li>
-                                <li><a href="./about-us.html">about us</a></li>
-                                <li><a href="./contact_us.html">contact</a></li>
-                                <li><a href="./faq.html">faq</a></li>
-                                <li><a href="./my-account.html">My Account</a></li>
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="./about-us.html">About us</a></li>
+                                <li><a href="./all-photos.html">Gallery</a></li>
+                                <li><a href="./faq.html">FAQ</a></li>
+                                <li><a href="./all-notices.html">Notice</a></li>
+                                <li><a href="./policies.html">Policy</a></li>
+                                <li><a href="./contact_us.html">Contact</a></li>
+                                <li><a href="./login.html">Login</a></li>
+                                <li><a href="./my-account.html">Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
