--- a/pages/sajek_details.html
+++ b/pages/sajek_details.html
@@ -207,7 +207,7 @@
 
 <!-- sidebar nav starts -->
 <div class="sidebar">
-    <h4 style="color: #122b40;">Page navigation</h4>
+    <h4>Page navigation</h4>
     <hr>
     <a  href="#accommodationID">Accommodation</a>
     <a href="#facilitiesID">Facilities</a>
