--- a/pages/emergency-contact.html
+++ b/pages/emergency-contact.html
@@ -112,7 +112,7 @@
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./all-tourist-spots.html">Our all tourist spots</a></li>
-        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
+        <li><a href="./sajek_details.html">Nirgiri Resort</a></li>
         <li class="active">Emergency local contact</li>
     </ol>
 </div>
@@ -121,7 +121,7 @@
 <!-- emergency contact starts-->
 <div class="container" id="accordion" style="margin-top: 20px">
     <div class="local-guidance">
-        <h3 class="text-center" style="padding: 10px; color: grey"> Local Guidance of Nilgiri Army Resort</h3>
+        <h3 class="text-center" style="padding: 10px; color: grey"> Local Guidance of Nirgiri Resort</h3>
         <hr>
         <p><strong>Name:</strong> Faisal Ibn Aziz</p>
         <p><strong>Mobile:</strong> 01521201537</p>
@@ -129,15 +129,15 @@
     </div>
 
     <div class="local-guidance">
-        <h3 class="text-center" style="padding: 10px; color: grey"> Emergency Contact of Nilgiri Army Resort</h3>
+        <h3 class="text-center" style="padding: 10px; color: grey"> Emergency Contact of Nirgiri Resort</h3>
         <hr>
         <p><strong>Name:</strong> Faisal Ibn Aziz</p>
         <p><strong>Mobile:</strong> 01521201537</p>
-        <p><strong>Address: </strong> nilgiri army resort</p>
+        <p><strong>Address: </strong> Nirgiri Resort</p>
     </div>
 
     <div class="local-guidance">
-        <h3 class="text-center" style="padding: 10px; color: grey"> Local Information of Nilgiri Army Resort</h3>
+        <h3 class="text-center" style="padding: 10px; color: grey"> Local Information of Nirgiri Resort</h3>
         <hr>
         <p><strong>Local Thana:</strong> Nirgiri Police station</p>
         <p><strong>Local Thana Mobile Number:</strong> 01521201537</p>
@@ -196,7 +196,7 @@
                     <div class="single-footer-item">
                         <h2>Our Tourist Spots</h2>
                         <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                            <p><a href="./sajek_details.html">Nirgiri Resort</a></p>
                             <p><a href="./sajek_details.html">Bandarban</a></p>
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
