--- a/pages/nilgiri-gallery.html
+++ b/pages/nilgiri-gallery.html
@@ -112,8 +112,8 @@
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./all-tourist-spots.html">Our all tourist spots</a></li>
-        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
-        <li class="active">All photos of nilgiri army resort</li>
+        <li><a href="./sajek_details.html">Nirgiri Resort</a></li>
+        <li class="active">All photos of Nirgiri Resort</li>
     </ol>
 </div>
 <!-- breadcrumbs ends -->
@@ -121,7 +121,7 @@
 <!-- all photos start -->
 <div class="container" style=" margin-bottom: 50px; color: grey; margin-top: 20px;">
     <div id="slideshowContainerID">
-        <h2 style="text-align:center;margin-bottom: 20px;">All photos of Nilgiri Army Resort</h2>
+        <h2 style="text-align:center;margin-bottom: 20px;">All photos of Nirgiri Resort</h2>
         <div class="row">
             <div class="column">
                 <img src="../assets/images/gallary/res-2-bambooChicken.jpg" style="width:100%; height: 250px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -244,7 +244,7 @@
                     <div class="single-footer-item">
                         <h2>Our Tourist Spots</h2>
                         <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                            <p><a href="./sajek_details.html">Nirgiri Resort</a></p>
                             <p><a href="./sajek_details.html">Bandarban</a></p>
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
