--- a/pages/restaurant-details.html
+++ b/pages/restaurant-details.html
@@ -97,8 +97,8 @@
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./all-tourist-spots.html">Our all tourist spots</a></li>
-        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
-        <li><a href="./all-restaurants.html">All restaurants of nilgiri army resort</a></li>
+        <li><a href="./sajek_details.html">Nirgiri Resort</a></li>
+        <li><a href="./all-restaurants.html">All restaurants of Nirgiri Resort</a></li>
         <li class="active">Peda Ting Ting details</li>
     </ol>
 </div>
@@ -315,7 +315,7 @@
                     <div class="single-footer-item">
                         <h2>Our Tourist Spots</h2>
                         <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                            <p><a href="./sajek_details.html">Nirgiri Resort</a></p>
                             <p><a href="./sajek_details.html">Bandarban</a></p>
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
