--- a/pages/sajek_details.html
+++ b/pages/sajek_details.html
@@ -193,14 +193,14 @@
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./all-tourist-spots.html">All our tourist spots</a></li>
-        <li class="active">Nilgiri Army Resort</li>
+        <li class="active">Nirgiri Resort</li>
     </ol>
 </div>
 <!-- breadcrumbs ends -->
 
 <!-- page title starts-->
 <div id="pageHeaderID">
-    <h1 style="text-align: center; color:grey; font-size: 50px; margin-bottom: 20px; margin-top: 20px">Nilgiri Army Resort</h1>
+    <h1 style="text-align: center; color:grey; font-size: 50px; margin-bottom: 20px; margin-top: 20px">Nirgiri Resort</h1>
     <hr>
 </div>
 <!-- page title ends-->
@@ -224,7 +224,7 @@
     <div class="container">
         <div class="gallary-header text-center">
             <h2>
-                Accommodations of Nilgiri Army Resorts
+                Accommodations of Nilgiri  Resorts
             </h2>
             <p>
                 Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
@@ -366,7 +366,7 @@
 <section id="facilitiesID" class="packages">
     <div class="container">
         <div class="gallary-header text-center">
-            <h2> Facilities of Nilgiri Army Resorts</h2>
+            <h2> Facilities of Nilgiri  Resorts</h2>
             <p>
                 Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
             </p>
@@ -504,7 +504,7 @@
     <div class="container">
         <div class="gallary-header text-center">
             <h2>
-                Events of Nilgiri Army Resort
+                Events of Nirgiri Resort
             </h2>
             <p>
                 Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
@@ -653,7 +653,7 @@
     <div class="container">
         <div class="gallary-header text-center">
             <h2>
-                Restaurants of Nilgiri Army Resort
+                Restaurants of Nirgiri Resort
             </h2>
             <p>
                 Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
@@ -772,7 +772,7 @@
     <div class="container">
         <div class="gallary-header text-center">
             <h2>
-                Offers of Nilgiri Army Resorts
+                Offers of Nilgiri  Resorts
             </h2>
             <p>
                 Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
@@ -1319,7 +1319,7 @@
                     <div class="single-footer-item">
                         <h2>Our Tourist Spots</h2>
                         <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                            <p><a href="./sajek_details.html">Nirgiri Resort</a></p>
                             <p><a href="./sajek_details.html">Bandarban</a></p>
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
