--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <!-- services start-->
 <section id="servicesID" class="service">
 	<div class="container">
-		<h1 style="text-align: center; color:grey; font-size: 50px; margin-bottom: 20px">Army E-Tourism</h1>
+		<h1 style="text-align: center; color:grey; font-size: 50px; margin-bottom: 20px"> E-Tourism</h1>
 		<hr>
 		<div class="service-counter text-center">
 
@@ -227,7 +227,7 @@
 									<img src="assets/images/gallary/sajek.jpg" alt="portfolio image"/>
 									<div class="item-title">
 										<a href="./pages/sajek_details.html">
-											Nilgiri Army Resort
+											Nirgiri Resort
 										</a>
 										<p><span>20 tours</span><span>15 places</span></p>
 									</div><!-- /.item-title -->
@@ -353,7 +353,7 @@
 					<div class="single-footer-item">
 						<h2>Our Tourist Spots</h2>
 						<div class="single-footer-txt">
-							<p><a href="./pages/sajek_details.html">Nilgiri Army Resort</a></p>
+							<p><a href="./pages/sajek_details.html">Nirgiri Resort</a></p>
 							<p><a href="./pages/sajek_details.html">Bandarban</a></p>
 							<p><a href="./pages/sajek_details.html">Rangamati</a></p>
 							<p><a href="./pages/sajek_details.html">Cox's Bazar</a></p>
