--- a/pages/my-account.html
+++ b/pages/my-account.html
@@ -143,7 +143,7 @@
                     <div class="single-package-item">
                         <img src="../assets/images/gallary/st_martin.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
-                            <h3>Nilgiri Army Resort</h3>
+                            <h3>Nirgiri Resort</h3>
                             <div class="packages-para">
                                 <p>
                                     <span>
@@ -175,7 +175,7 @@
                     <div class="single-package-item">
                         <img src="../assets/images/gallary/bandarban.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
-                            <h3>Bandarban Army Resort</h3>
+                            <h3>Bandarban  Resort</h3>
                             <div class="packages-para">
                                 <p>
                                     <span>
@@ -207,7 +207,7 @@
                     <div class="single-package-item">
                         <img src="../assets/images/gallary/cox_bazar.jpg"  style="height: 300px;width:370px" alt="package-place">
                         <div class="single-package-item-txt">
-                            <h3>Cox Bazar Army Resort</h3>
+                            <h3>Cox Bazar  Resort</h3>
                             <div class="packages-para">
                                 <p>
                                     <span>
@@ -398,7 +398,7 @@
                     <div class="single-footer-item">
                         <h2>Our Tourist Spots</h2>
                         <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                            <p><a href="./sajek_details.html">Nirgiri Resort</a></p>
                             <p><a href="./sajek_details.html">Bandarban</a></p>
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
